@@ -471,12 +471,10 @@ grub_ufs_find_file (struct grub_ufs_data *data, const char *path)
   grub_strcpy (fpath, path);
 
   /* Skip the first slash.  */
-  if (name[0] == '/')
-    {
-      name++;
-      if (!*name)
-	return 0;
-    }
+  while (*name == '/')
+    name++;
+  if (!*name)
+    return 0;
 
   /* Extract the actual part from the pathname.  */
   next = grub_strchr (name, '/');
@@ -484,6 +482,8 @@ grub_ufs_find_file (struct grub_ufs_data *data, const char *path)
     {
       next[0] = '\0';
       next++;
+      while (*next == '/')
+	next++;
     }
 
   do
@@ -536,6 +536,8 @@ grub_ufs_find_file (struct grub_ufs_data *data, const char *path)
 	      {
 		next[0] = '\0';
 		next++;
+		while (*next == '/')
+		  next++;
 	      }
 
 	    if ((INODE_MODE(data) & GRUB_UFS_ATTR_TYPE) != GRUB_UFS_ATTR_DIR)
